export report fix

--- a/CDR.API/CDR.API.csproj
+++ b/CDR.API/CDR.API.csproj
@@ -53,5 +53,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Upload\" />
+  </ItemGroup>
 
 </Project>
