--- a/CDR.API/appsettings.json
+++ b/CDR.API/appsettings.json
@@ -14,6 +14,7 @@
     "ValidIssuer": "https://localhost:7084",
     "Secret": "JwtSecretKeyForAuthorizationAndAuthentication1234567890"
   },
+  "Callbacks": "http://localhost:3000",
   "SmtpSettings": {
     "Server": "mail.buluttel.com",
     "Port": 587,
